[package]
name = "safe_print"
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Octalbyte octalbyte0o52@protonmail.com"]
description = "Immediately write to stdout/stderr without newline"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
